# libgnuisance

./: .editorconfig  ChangeLog  INSTALL  Makefile.am  NEWS  README  configure.ac  package.json
autostuff/m4/: not-autotools.m4
docgen/: Makefile.am
docgen/reference/: Makefile.am  gnuisance-docs.xml
docs/: annotation-glossary.html  api-index-full.html  deprecated.html  fundamentals.html  gnui-definitions.html  gnui-emblem-picker.html  gnui-environment.html  gnui-flow-layout.html  gnui-flow.html  gnui-tagged-entry.html  gnuisance-gnui-emblem-picker.gresources.html  gnuisance-gnui-tagged-entry.gresources.html  gnuisance-gnuisance.gresources.html  gnuisance.devhelp2  index.html  internals.html  layout-managers.html  reference.html  resources.html  widgets.html
po/: .pot  Makevars  POTFILES.in  it.po  nl.po
sandbox/after-install/: emblem-picker-sandbox-run.sh  emblem-picker-sandbox.c  flow-sandbox-run.sh  flow-sandbox.c  tagged-entry-sandbox-run.sh  tagged-entry-sandbox.c
sandbox/after-install/subclassing/: README.md
sandbox/after-install/subclassing/gnuiflow/: try-me.c  try-me.sh  xyz-foo-bar.c  xyz-foo-bar.h
sandbox/after-install/subclassing/gtkwidget-with-gnuiflowlayout/: try-me.c  try-me.sh  xyz-foo-bar.c  xyz-foo-bar.h
sandbox/before-install/: emblem-picker-sandbox-run.sh  emblem-picker-sandbox.c  flow-sandbox-run.sh  flow-sandbox.c  tagged-entry-sandbox-run.sh  tagged-entry-sandbox.c
src/: Makefile.am  gnui-environment.c  gnui-environment.h  gnuienvironment.pc.in  gnuisance.h  gnuisance.pc.in
src/widgets/: Makefile.am
src/widgets/emblem-picker/: Makefile.am  gnuiemblempicker.pc.in
src/widgets/flow/: Makefile.am  gnui-flow-layout.h  gnui-flow.c  gnui-flow.h  gnuiflow.pc.in
src/widgets/tagged-entry/: Makefile.am  gnui-tagged-entry.c  gnui-tagged-entry.h  gnuitaggedentry.pc.in  style.css
